# spatial_audio_server

./: .gitignore  Cargo.toml  README.md
assets/: config.json  config.toml  config_experiment.toml  installations.json  master.json  soundscape.json  sources.json  speakers.json
assets/projects/180419-arup/: config.json  state.json
assets/projects/my-project/: state.json
assets/projects/my-project-1/: state.json
assets/projects/my-project-2/: state.json
src/lib/: audio.rs  camera.rs  composer.rs  config.rs  installation.rs  interaction.rs  lib.rs  master.rs  metres.rs  osc.rs  serde_extra.rs  soundscape.rs  utils.rs
src/lib/audio/: backend.rs  dbap.rs  detection.rs  detector.rs  fft.rs  input.rs  mod.rs  output.rs  requester.rs  sound.rs  source.rs  speaker.rs  wav.rs
src/lib/audio/source/: fast_wave.rs  mod.rs  realtime.rs  wav.rs
src/lib/audio/source/wav/: mod.rs  reader.rs  samples.rs
src/lib/gui/: control_log.rs  installation_editor.rs  interaction_log.rs  master.rs  mod.rs  monitor.rs  osc_in_log.rs  osc_out_log.rs  project_editor.rs  soundscape_editor.rs  source_editor.rs  speaker_editor.rs  theme.rs
src/lib/gui/custom_widget/: mod.rs  sound.rs
src/lib/osc/: input.rs  output.rs
src/lib/project/: config.rs  mod.rs
src/lib/soundscape/: group.rs  mod.rs  movement.rs
src/lib/soundscape/movement/: agent.rs  mod.rs  ngon.rs
