[package]
name = "audio_server"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
resolver = "2"
edition = "2021"
include = ["src/**/*", "README.md"]

[profile.release]
debug = true

[[bin]]
name = "audio_server"
path = "src/bin/main.rs"

[lib]
name = "audio_server"
path = "src/lib/lib.rs"

[dependencies]
conrod_core = "0.76.1"
conrod_derive = "0.76.1"
crossbeam = "0.8.1"
custom_derive = "0.1.7"
dasp = { version = "0.11.0", features = ["all"] }
fxhash = "0.2.1"
hound = "3.4.0"
mindtree_utils = "0.4.0"
newtype_derive = "0.1.6"
nannou = "0.18.1"
nannou_audio = "0.18.0"
nannou_conrod = "0.18.0"
nannou_osc = "0.18.0"
num_cpus = "1.13.1"
pitch_calc = "0.12.0"
rand_xorshift = "0.3.0"
rustfft = "6.0.1"
serde = { version = "1.0.137", features = ["rc"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"
slug = "0.1.4"
time_calc = { version = "0.13.0", features = ["serde"] }
threadpool = "1.8.1"
walkdir = "2.3.2"

[features]
asio = ["nannou_audio/asio"]
test_with_stereo = []        # Compile with this feature to set the max i/o channels as `2`.
